package local.sop.sopinfo.notification.application.api.dto;

import java.util.UUID;

public record CreateNotificationResult(
	UUID id
) {}